--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,9 +1,128 @@
-@charset "utf-8";
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css?family=Charm');
+@font-face {
+	font-family: 'Font-Logo';
+	src:url("../fonts/bubblegum-sans-regular.otf");
+}
+
 body {
-			background-color:hsl(0,0%,100%);
-			color:rgba(51,51,51,0.9);
-	}
+	background-color:#dddddd;
+	color:rgba(0,0,0,0.9);
+}
+
+div#interface {
+	width: 900px;
+	background: white;
+	margin: -20px auto 0px auto;
+	box-shadow: 0px 0px 10px rgba(0,0,0,.5);
+	padding: 10px;
+}
+
+header#cabecalho {
+	border-bottom: 1px #606060 solid;
+	height: 150px;
+	background-image: url("../imagens/glass-logo-peq.jpg");
+	background-repeat: no-repeat;
+	background-position: 0px 80px;
+}
+
+header#cabecalho h1 {
+	font-family: 'Font-Logo';
+	font-size: 30pt;
+	color: #606060;
+	text-shadow: 1px 1px 1px rgba(0,0,0,.6)
+	padding: 0px;
+	margin-bottom: 0px;
+}
+
+header#cabecalho h2 {
+	font-family: 'Charm', cursive;
+	font-size: 15pt;
+	color: #888888;
+	padding: 0px;
+	margin-top: 0px;
+}
+
+header#cabecalho img#icone {
+	position: absolute;
+	left: 900px;
+	top: 70px;
+}
+
 p {
-			text-align:justify;
-			text-indent:50px;
-	}
+	text-align:justify;
+	text-indent:50px;
+}
+
+/*Formatação de fotos com legendas*/
+figure.fotoLegenda {
+	position: relative;
+	border: 10px solid white;
+	box-shadow: 2px 2px 10px black;
+    max-width:300px;
+}
+
+figure.fotoLegenda img {
+	width: 100%;
+	height: 100%;
+}
+
+figure.fotoLegenda figcaption {
+	opacity: 0;
+	position: absolute;
+	top: 0px;
+	background-color: rgba(0,0,0,.4);
+	color: white;
+	width: 100%;
+	height: 100%;
+	padding: 10px;
+	box-sizing: border-box;
+	transition: opacity 1s;
+}
+
+figure.fotoLegenda:hover figcaption {
+	opacity: 1;
+}
+
+/*Formatação do Menu*/
+nav#menu {
+	display: block;
+}
+
+nav#menu ul {
+	list-style: none;
+	text-transform: uppercase;
+	position: absolute;
+	top: -20px;
+	left: 400px;
+}
+
+nav#menu li {
+	display: inline-block;
+	background-color: #dddddd;
+	padding: 10px;
+	border: 2px;
+	-webkit-transition: background-color 1s;
+	-moz-transition: background-color 1s;
+	-ms-transition: background-color 1s;
+	-o-transition: background-color 1s;
+	transition: background-color 1s;
+}
+
+nav#menu li:hover {
+	background-color: #606060;
+}
+
+nav#menu h2 {
+	display: none;
+}
+
+nav#menu a {
+	color: #000000;
+	text-decoration: none;
+}
+
+nav#menu a:hover {
+	color: #ffffff;
+	text-decoration: underline;
+}
