--- a/css/estilo.css
+++ b/css/estilo.css
@@ -19,7 +19,7 @@ div#interface {
 }
 
 header#cabecalho {
-	border-bottom: 1px #606060 solid;
+	border-bottom: 2px #606060 solid;
 	height: 150px;
 	background-image: url("../imagens/glass-logo-peq.jpg");
 	background-repeat: no-repeat;
@@ -46,7 +46,7 @@ header#cabecalho h2 {
 header#cabecalho img#icone {
 	position: absolute;
 	left: 900px;
-	top: 70px;
+	top: 75px;
 }
 
 p {
@@ -57,9 +57,8 @@ p {
 /*Formatação de fotos com legendas*/
 figure.fotoLegenda {
 	position: relative;
-	border: 10px solid white;
-	box-shadow: 2px 2px 10px black;
-    max-width:300px;
+	border: 8px solid white;
+	box-shadow: 1px 1px 4px black;
 }
 
 figure.fotoLegenda img {
@@ -125,4 +124,65 @@ nav#menu a {
 nav#menu a:hover {
 	color: #ffffff;
 	text-decoration: underline;
+}
+
+section#corpo {
+	display: block;
+	width: 520px;
+	float: left;
+	border-right: 1px solid #606060;
+	padding-right: 10px;
+}
+
+table#tabelaspec {
+	border: 1px solid #606060;
+	border-spacing: 0px;
+	margin-right: auto;
+	margin-left: auto;
+}
+table#tabelaspec caption {
+	color: #888888;
+	font-size: 13pt;
+	font-weight: bolder;
+}
+
+table#tabelaspec caption span {
+	display: block;
+	text-align: right;
+	color: rgba(0,0,0,.9);
+	font-size: 8pt;
+}
+
+table#tabelaspec td {
+	border: 1px solid #606060;
+	padding: 10px;
+	vertical-align: top;
+}
+
+table#tabelaspec td.classeEsquerda {
+	color: #ffffff;
+	background-color: #606060;
+	font-weight: bold;
+	text-align: right;
+}
+
+table#tabelaspec td.classeDireita {
+	font-family: serif;
+	background-color: #cecece;
+	text-align: left;
+}
+
+aside#lateral {
+	display: block;
+	width: 350px;
+	float: right;
+}
+
+footer#rodape {
+	clear: both;
+	border-top: 2px solid #606060;
+}
+
+footer#rodape p {
+	text-align: center;;
 }
