--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Charm');
 @font-face {
 	font-family: 'Font-Logo';
@@ -6,7 +6,7 @@
 }
 
 body {
-	background-color:#dddddd;
+	background-color: #dddddd;
 	color:rgba(0,0,0,0.9);
 	font-family: sans-serif;
 }
@@ -31,7 +31,7 @@ header#cabecalho h1 {
 	font-family: 'Font-Logo', sans-serif;
 	font-size: 30pt;
 	color: #606060;
-	text-shadow: 1px 1px 1px rgba(0,0,0,.6)
+	text-shadow: 1px 1px 1px rgba(0,0,0,.6);
 	padding: 0px;
 	margin-bottom: 0px;
 }
@@ -241,5 +241,16 @@ footer#rodape {
 }
 
 footer#rodape p {
-	text-align: center;;
+	text-align: center;
+}
+
+/*Configuração das telas de vídeo*/
+
+
+video#filme01 {
+	width: 550px; 
+}
+
+video#filme02 {
+	width: 340px;
 }
